// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render dzcode dark theme 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  muiltr-7ifnzh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render dzcode light theme 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  muiltr-q9vf94-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render inverted theme 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  muirtl-q9vf94-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    اضغظ هنا
  </button>
</div>
`;
